# ChangeLog for sys-apps/schedule
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*starter-3.1 (15 Aug 2014)

  15 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-3.0 (14 Aug 2014)

  14 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support job address, job address ranges

*starter-2.2 (12 Aug 2014)

  12 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support nonpositive numbers in job ranges

*starter-2.1 (11 Aug 2014)

  11 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump. Support static job numbers, race-free parallel

*starter-1.1 (10 Aug 2014)

  10 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support --bg --daemon. Essential bugfixes

*starter-1.0 (09 Aug 2014)

  09 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Strengthen encryption

*starter-0.15 (08 Aug 2014)

  08 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Add recommendations for encryption

*starter-0.14 (02 Aug 2014)

  02 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.13 (29 Jul 2014)

  29 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.12 (27 Jul 2014)

  27 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.11 (26 Jul 2014)

  26 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.10 (25 Jul 2014)

  25 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.9 (24 Jul 2014)

  24 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.8 (19 Jul 2014)

  20 Jul 2014; Martin Väth <martin@mvath.de>:
  List all dependencies

  19 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.7 (18 Jul 2014)
