@@ -1,2 +1,1 @@
-DIST schedule-1.1.tar.gz 24603 SHA256 5dfa3f873aa35b95bb5cfcd84a49c19c1890a6c502f1335341bf1d7145953fc6 SHA512 12accb7d63bfabc7621fe44c8776843194be4d33c263dc261777d65e777b170351b4e8c5c77b37a61a740bfff2b9681f47df6dd3695158329b7a7c23c537dc48 WHIRLPOOL 959b7393d7a4d3e47dc093f65291c9f5ce8688821ca6cb4fd023a7ed723bbf03b6a20b5cc76ee21c30ff10fc07f1ce43cb989524c730222db29c17103c6dd2b5
-DIST schedule-3.1.tar.gz 32706 SHA256 152bd708a21bc4a9557fd67de25298c84d70d709c39131e40b58eea25b16b9c7 SHA512 f3b2ec0a92e6b853546ccafbd620b7266138170d321be9e31668a1ac426d8bff36b9d29efefe0f6c702e89d83f030123b29d704e1c43fee98767a330c31c1378 WHIRLPOOL 747fdfc0b228303309b96eaed8ac196ab6530cb8e625833caab7ddec394a5f7683aee996820585ff162f6ca858b1492fd7d2bc0da88f13a11c7fc61f84e1aeb4
+DIST schedule-4.0.tar.gz 34939 SHA256 01e0261b0cfdcea0714ad4653ff471635687e2dde9b80b12447ca278001757d5 SHA512 96e5c30b8de3a0862ebd17eba5b38af74487aa4ce4675fac2e2eb4c9cfbad5f6a10572791c584aaaa6b38669c3b807f2966bef225cd7505d76edfdf3209b424a WHIRLPOOL 611b8e26082d61ef717c168e193874cd7539b09c9299d5ed6d3ef403a4d28dbc39aee429548e4e778c56437cf46a969aae1b0b9b34079f5ca0ec31362bccc159
